# ma_demos

./: README.md  ma_demos.rolling.repos
dds_profiles/: README.md
dds_profiles/connext_dds/: README.md
dds_profiles/cyclon_dds/: README.md
dds_profiles/fast_dds/: README.md  example.xml
dds_profiles/zenoh/: DEFAULT_CONFIG.json5  README.md
kuka/: README.md
kuka/kuka_bringup/: CMakeLists.txt  package.xml
kuka/kuka_bringup/controller_config/: down.yaml  kuka_6dof_chained_forward_position_controller_goals.yaml  kuka_6dof_controllers.yaml  kuka_6dof_forward_position_controller_goals.yaml  kuka_6dof_joint_trajectory_controller_goals.yaml  move_lin.yaml  up.yaml
kuka/kuka_bringup/launch/: forward_position_controller_goal_publisher.launch.py  joint_trajectory_controller_goal_publisher.launch.py  kuka.launch.py  kuka_kr16_2.launch.py  kuka_kr5_chained_jtc.launch.py  move_lin.launch.py  (+1 more)
kuka_kr16/: README.md
ma_demo_bringup/: CMakeLists.txt  package.xml
ma_demo_bringup/controller_config/: kuka_6dof_forward_position_controller.yaml
ma_demo_description/kuka_kr16_2_description/: CMakeLists.txt  package.xml
ma_demos_launch_helpers/: CMakeLists.txt  package.xml
ma_demos_launch_helpers/ma_demos_launch_helpers/: __init__.py  helpers.py  select_kuka_robot.py
time_synchronization/: README.md
two_distributed_kukas/two_distributed_kukas_bringup/: CMakeLists.txt  README.md  package.xml
two_distributed_kukas/two_distributed_kukas_chained_bringup/: CMakeLists.txt  README.md  package.xml
two_distributed_kukas/two_distributed_rrbots_bringup/: CMakeLists.txt
two_distributed_rrbots/two_distributed_rrbots_bringup/: CMakeLists.txt  package.xml
two_distributed_rrbots/two_distributed_rrbots_bringup/controller_config/: kuka_6dof_joint_trajectory_controller_goals.yaml  main_controllers.yaml  rrbot_controllers_satellite_1.yaml  rrbot_controllers_satellite_2.yaml
two_distributed_rrbots/two_distributed_rrbots_bringup/launch/: joint_trajectory_controller_goal_publisher.launch.py  test_two_distributed_rrbots_forward_position_controller.launch.py  two_distributed_rrbots.launch.py
two_distributed_rrbots/two_distributed_rrbots_description/: CMakeLists.txt  package.xml
two_distributed_rrbots/two_distributed_rrbots_hw/: CMakeLists.txt  package.xml  ros2_control_demo_hardware.xml
(+79 files in other folders)
